@@ -1,5 +1,15 @@
 2005-08-27  Bruno Haible  <bruno@clisp.org>
 
+	Make it possible to cross-compile CLN.
+	* m4/intparam.m4: New file.
+	* m4/floatparam.m4: New file.
+	* autoconf/aclocal.m4: Include both.
+	(CL_MACHINE): Add an additional CROSS_MACRO parameter.
+	* configure.ac (CL_MACHINE): When cross-compiling, use
+	CL_INTPARAM_CROSS and CL_FLOATPARAM_CROSS.
+
+2005-08-27  Bruno Haible  <bruno@clisp.org>
+
 	Define HAVE_LONGLONG and HAVE_LONGDOUBLE when cross-compiling.
 	* autoconf/aclocal.m4 (CL_LONGLONG, CL_LONGDOUBLE): When cross-
 	compiling, use the test code from gnulib.
